// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Button tag Matches earlier configuration 1`] = `
<button
  className=""
/>
`;

exports[`Button tag Matches earlier configuration if alt prop is true 1`] = `
<button
  alt={true}
  className=""
/>
`;

exports[`Button tag Matches earlier configuration if alt prop is true 2`] = `
<button
  className=""
  disabled={true}
/>
`;
